３時間置きの天気情報取得するAPIを追加
